examples/invalid/or.lama
bool f = false ;
int x = 5;

bool exc = f || x ;
print exc ;
